@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2025-07-26T01:47:25Z",
-  "count" : 119,
+  "timestamp" : "2025-08-08T01:54:04Z",
+  "count" : 56,
   "count_minmax" : [ 15, 119 ],
-  "count_decinc" : [ -0, +119 ],
+  "count_decinc" : [ -63, +119 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
