@@ -1,24 +1,15 @@
 {
-  "timestamp" : "2025-08-07T01:54:35Z",
-  "count_outdated" : 263667,
-  "uniques_outdated" : 2730,
-  "count" : 265337,
+  "timestamp" : "2025-08-08T01:54:04Z",
+  "count_outdated" : 263786,
+  "uniques_outdated" : 2732,
+  "count" : 265442,
   "uniques" : 2757,
   "clones" : [
     {
-      "timestamp": "2025-07-24T00:00:00Z",
-      "count": 55,
-      "count_minmax": [ 16, 119 ],
-      "count_decinc": [ 64, 119 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
-    {
       "timestamp": "2025-07-25T00:00:00Z",
-      "count": 119,
+      "count": 56,
       "count_minmax": [ 15, 119 ],
-      "count_decinc": [ 0, 119 ],
+      "count_decinc": [ 63, 119 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -133,9 +124,9 @@
     },
     {
       "timestamp": "2025-08-07T00:00:00Z",
-      "count": 13,
-      "count_minmax": [ 13, 13 ],
-      "count_decinc": [ 0, 13 ],
+      "count": 118,
+      "count_minmax": [ 13, 118 ],
+      "count_decinc": [ 0, 118 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
