@@ -1,15 +1,10 @@
 {
-  "count": 1606,
+  "count": 1593,
   "uniques": 3,
   "clones": [
     {
-      "timestamp": "2025-07-24T00:00:00Z",
-      "count": 55,
-      "uniques": 1
-    },
-    {
       "timestamp": "2025-07-25T00:00:00Z",
-      "count": 119,
+      "count": 56,
       "uniques": 1
     },
     {
@@ -74,7 +69,7 @@
     },
     {
       "timestamp": "2025-08-07T00:00:00Z",
-      "count": 13,
+      "count": 118,
       "uniques": 2
     }
   ]
